--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer base {
+	html {
+		font-family: 'Inter', sans-serif;
+	}
+
+	body {
+		background-color: #2b333c;
+		color: #fdfeff;
+	}
+}
